# TradingVn30

./: .env  .env_template  HUONG_DAN_SU_DUNG.md  Start_Bot.bat  Start_Bot_Complete.bat  Thuat toan trading.txt  Update_Data.bat  VN30_Bot_Manager.bat  chat_id.txt  check_data.py  debug_models.py  debug_pipeline.py  debug_quote.py  debug_quote_v2.py  debug_report.py  debug_vnstock.py  full_seed_vn30.py  get_telegram_id.py  inspect_vnstock.py  manual_insert.py  manual_insert_sql.py  monitor_telegram.py  pyproject.toml  send_report_now.py  test_scheduler.py  trading_app_init.sql  trigger_run.py  update_log.txt  vnstock_dir.txt  vnstock_info.txt
reports/20260129/: run_9e0f840f-4c3d-4b8f-a308-171bdd1f7147.md  run_9e0f840f-4c3d-4b8f-a308-171bdd1f7147_ranking.json  run_9e0f840f-4c3d-4b8f-a308-171bdd1f7147_top3.json
reports/20260208/: run_2219723c-2bee-4d5f-9c4a-86a2b0358690.md  run_2219723c-2bee-4d5f-9c4a-86a2b0358690_ranking.json  run_2219723c-2bee-4d5f-9c4a-86a2b0358690_top3.json
src/app/: main.py
src/app/api/: endpoints.py
src/app/cli/: main.py
src/app/core/: config.py  scheduler.py
src/app/data_provider/: client.py  universe_manager.py
src/app/db/: init_db.py  models.py  session.py
src/app/logic/: indicators.py  reporting.py  scorer.py  signals.py
src/app/notification/: telegram.py
